--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -36,8 +36,8 @@ jobs:
 
 
     # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
-    - name: Run SonarQube
-      run: mvn sonar:sonar -Dsonar.projectKey=github-action -Dsonar.host.url=${{secrets.SONAR_HOST}} -Dsonar.login=${{secrets.SONAR_TOKEN}}
+#    - name: Run SonarQube
+#      run: mvn sonar:sonar -Dsonar.projectKey=github-action -Dsonar.host.url=${{secrets.SONAR_HOST}} -Dsonar.login=${{secrets.SONAR_TOKEN}}
     - name: upload file
       uses: appleboy/scp-action@master
       with:
