--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -37,7 +37,7 @@ jobs:
 
     # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
     - name: Run SonarQube
-      run: mvn sonar:sonar -Dsonar.projectKey=github-action -Dsonar.host.url=${{secrets.SONAR_HOST}} -Dsonar.login=${{secrets.SONAR_TOKEN}}
+      run: mvn clean verify sonar:sonar -Dsonar.projectKey=JBGW006-008-test -Dsonar.projectName='JBGW006-008-test' -Dsonar.host.url=http://133.186.241.167:9000 -Dsonar.token=sqp_cb28f116e47c6517fcfa194808d57bae42116ac3
 
     - name: upload file
       uses: appleboy/scp-action@master
