--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -32,10 +32,10 @@ jobs:
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
       - name: Build Docker image
-        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/hello-spring:latest .
+        run: sudo docker build -t ${{ secrets.DOCKER_USERNAME }}/hello-spring:latest .
 
       - name: Push Docker image to Docker Hub
-        run: docker push ${{ secrets.DOCKER_USERNAME }}/hello-spring:latest
+        run: sudo docker push ${{ secrets.DOCKER_USERNAME }}/hello-spring:latest
 
       - name: Deploy to server via SSH
         uses: appleboy/ssh-action@master
