--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -48,9 +48,8 @@ services:
 #      - mssql-data:/var/opt/mssql
 #    networks:
 #      - app-network
-
-volumes:
-  mssql-data:
+#volumes:
+#  mssql-data:
 
 networks:
   app-network:
