--- a/nginx.conf
+++ b/nginx.conf
@@ -9,8 +9,16 @@ http {
     server {
         listen 80;
 
-        location / {
-            proxy_pass http://java_app;
+        location /app1/ {
+            proxy_pass http://app1/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        location /app2/ {
+            proxy_pass http://app2/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
