--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -51,6 +51,16 @@ jobs:
           sudo docker-compose push
         #run: sudo docker push ${{ secrets.DOCKER_USERNAME }}/hello-spring:latest
 
+      - name: Copy files to server
+        uses: appleboy/scp-action@master
+        with:
+          host: ${{ secrets.SSH_IP }}
+          username: ${{ secrets.SSH_ID }}
+          key: ${{ secrets.SSH_KEY }}
+          port: ${{ secrets.SSH_PORT }}
+          source: "."
+          target: "/app"
+
       - name: Deploy to server via SSH
         uses: appleboy/ssh-action@master
         with:
@@ -59,6 +69,7 @@ jobs:
           key: ${{ secrets.SSH_KEY }}
           port: ${{ secrets.SSH_PORT }}
           script: |
+            cd /app
             docker-compose pull
             docker-compose down || true
             docker-compose up -d
