--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -69,7 +69,10 @@ jobs:
           key: ${{ secrets.SSH_KEY }}
           port: ${{ secrets.SSH_PORT }}
           script: |
-            cd /app
+            mkdir -p /home/ubuntu/app
+            cd $GITHUB_WORKSPACE
+            cp -r * /home/ubuntu/app
+            cd /home/ubuntu/app
             docker-compose pull
             docker-compose down || true
             docker-compose up -d
