--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -51,15 +51,15 @@ jobs:
           sudo docker-compose push
         #run: sudo docker push ${{ secrets.DOCKER_USERNAME }}/hello-spring:latest
 
-      - name: Copy files to server
-        uses: appleboy/scp-action@master
-        with:
-          host: ${{ secrets.SSH_IP }}
-          username: ${{ secrets.SSH_ID }}
-          key: ${{ secrets.SSH_KEY }}
-          port: ${{ secrets.SSH_PORT }}
-          source: "."
-          target: "/app"
+#      - name: Copy files to server
+#        uses: appleboy/scp-action@master
+#        with:
+#          host: ${{ secrets.SSH_IP }}
+#          username: ${{ secrets.SSH_ID }}
+#          key: ${{ secrets.SSH_KEY }}
+#          port: ${{ secrets.SSH_PORT }}
+#          source: "."
+#          target: "/app"
 
       - name: Deploy to server via SSH
         uses: appleboy/ssh-action@master
