--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -28,11 +28,6 @@ jobs:
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v1
 
-      - name: Install Docker Compose
-        run: |
-          sudo curl -L "https://github.com/docker/compose/releases/download/1.29.2/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
-          sudo chmod +x /usr/local/bin/docker-compose docker-compose --version
-
       - name: Build with Maven
         run: mvn -B package --file pom.xml
 #
@@ -51,15 +46,25 @@ jobs:
           sudo docker-compose push
         #run: sudo docker push ${{ secrets.DOCKER_USERNAME }}/hello-spring:latest
 
-#      - name: Copy files to server
-#        uses: appleboy/scp-action@master
-#        with:
-#          host: ${{ secrets.SSH_IP }}
-#          username: ${{ secrets.SSH_ID }}
-#          key: ${{ secrets.SSH_KEY }}
-#          port: ${{ secrets.SSH_PORT }}
-#          source: "."
-#          target: "/app"
+      - name: Copy docker-compose.yml to server
+        uses: appleboy/scp-action@master
+        with:
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.SSH_ID }}
+          key: ${{ secrets.PRIVATE_KEY }}
+          port: ${{ secrets.SSH_PORT }}
+          source: "docker-compose.yml"
+          target: "/home/ubuntu/test"
+
+      - name: Copy nginx.conf to server
+        uses: appleboy/scp-action@master
+        with:
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.SSH_ID }}
+          key: ${{ secrets.PRIVATE_KEY }}
+          port: ${{ secrets.SSH_PORT }}
+          source: "nginx.conf"
+          target: "/home/ubuntu/test"
 
       - name: Deploy to server via SSH
         uses: appleboy/ssh-action@master
