--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -49,9 +49,9 @@ jobs:
       - name: Copy docker-compose.yml to server
         uses: appleboy/scp-action@master
         with:
-          host: ${{ secrets.HOST }}
+          host: ${{ secrets.SSH_IP }}
           username: ${{ secrets.SSH_ID }}
-          key: ${{ secrets.PRIVATE_KEY }}
+          key: ${{ secrets.SSH_KEY }}
           port: ${{ secrets.SSH_PORT }}
           source: "docker-compose.yml"
           target: "/home/ubuntu/test"
@@ -59,9 +59,9 @@ jobs:
       - name: Copy nginx.conf to server
         uses: appleboy/scp-action@master
         with:
-          host: ${{ secrets.HOST }}
+          host: ${{ secrets.SSH_IP }}
           username: ${{ secrets.SSH_ID }}
-          key: ${{ secrets.PRIVATE_KEY }}
+          key: ${{ secrets.SSH_KEY }}
           port: ${{ secrets.SSH_PORT }}
           source: "nginx.conf"
           target: "/home/ubuntu/test"
