--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -66,6 +66,16 @@ jobs:
           source: "nginx.conf"
           target: "/home/ubuntu/test"
 
+      - name: Copy nginx.conf to server
+        uses: appleboy/scp-action@master
+        with:
+          host: ${{ secrets.SSH_IP }}
+          username: ${{ secrets.SSH_ID }}
+          key: ${{ secrets.SSH_KEY }}
+          port: ${{ secrets.SSH_PORT }}
+          source: "Dockerfile"
+          target: "/home/ubuntu/test"
+
       - name: Deploy to server via SSH
         uses: appleboy/ssh-action@master
         with:
@@ -74,9 +84,6 @@ jobs:
           key: ${{ secrets.SSH_KEY }}
           port: ${{ secrets.SSH_PORT }}
           script: |
-            mkdir -p /home/ubuntu/test
-            cd $GITHUB_WORKSPACE
-            cp -r * /home/ubuntu/test
             cd /home/ubuntu/test
             docker-compose pull
             docker-compose down || true
