--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,9 @@ version: '3.8'
 
 services:
   app1:
-    build: .
+    build:
+      context: ./app1
+      dockerfile: Dockerfile
     ports:
       - "8081:8080"
     networks:
@@ -15,7 +17,9 @@ services:
 #      - SPRING_DATASOURCE_PASSWORD=yourPassword
 
   app2:
-    build: .
+    build:
+      context: ./app2
+      dockerfile: Dockerfile
     ports:
       - "8082:8080"
     networks:
