--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,9 +2,7 @@ version: '3.8'
 
 services:
   app1:
-    build:
-      context: ./app1
-      dockerfile: Dockerfile
+    build: .
     ports:
       - "8081:8080"
     networks:
@@ -17,9 +15,7 @@ services:
 #      - SPRING_DATASOURCE_PASSWORD=yourPassword
 
   app2:
-    build:
-      context: ./app2
-      dockerfile: Dockerfile
+    build: .
     ports:
       - "8082:8080"
     networks:
