--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -46,34 +46,14 @@ jobs:
           sudo docker-compose push
         #run: sudo docker push ${{ secrets.DOCKER_USERNAME }}/hello-spring:latest
 
-      - name: Copy docker-compose.yml to server
+      - name: Copy files to server
         uses: appleboy/scp-action@master
         with:
           host: ${{ secrets.SSH_IP }}
           username: ${{ secrets.SSH_ID }}
           key: ${{ secrets.SSH_KEY }}
           port: ${{ secrets.SSH_PORT }}
-          source: "docker-compose.yml"
-          target: "/home/ubuntu/test"
-
-      - name: Copy nginx.conf to server
-        uses: appleboy/scp-action@master
-        with:
-          host: ${{ secrets.SSH_IP }}
-          username: ${{ secrets.SSH_ID }}
-          key: ${{ secrets.SSH_KEY }}
-          port: ${{ secrets.SSH_PORT }}
-          source: "nginx.conf"
-          target: "/home/ubuntu/test"
-
-      - name: Copy nginx.conf to server
-        uses: appleboy/scp-action@master
-        with:
-          host: ${{ secrets.SSH_IP }}
-          username: ${{ secrets.SSH_ID }}
-          key: ${{ secrets.SSH_KEY }}
-          port: ${{ secrets.SSH_PORT }}
-          source: "Dockerfile"
+          source: "."
           target: "/home/ubuntu/test"
 
       - name: Deploy to server via SSH
