--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -56,6 +56,23 @@ jobs:
           source: "."
           target: "/home/ubuntu/test"
 
+      - name: Stop existing containers on port 80 and 8080
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.HOST }}
+          username: ec2-user
+          key: ${{ secrets.PRIVATE_KEY }}
+          port: 22
+          script: |
+            ports_to_check=("80" "8080")
+            for port in "${ports_to_check[@]}"; do
+              existing_container=$(sudo lsof -i:$port -t)
+              if [ ! -z "$existing_container" ]; then
+                sudo docker stop $existing_container
+                sudo docker rm $existing_container
+              fi
+            done
+
       - name: Deploy to server via SSH
         uses: appleboy/ssh-action@master
         with:
